--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Helvetica; color: #000000; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
+    span.Apple-tab-span {white-space:pre}
   </style>
 </head>
 <body>
@@ -16,6 +17,7 @@
 <p class="p1"><span class="s1">&lt;head&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p1"><span class="s1">&lt;body class=“body1”&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-tab-span">	</span>&lt;div class=“caja1”&gt;&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1"><br>
 </span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
