--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-<<<<<<< HEAD
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title></title>
@@ -19,15 +18,10 @@
 <p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p1"><span class="s1">&lt;body class=“body1”&gt;</span></p>
 <p class="p1"><span class="s1"><span class="Apple-tab-span">	</span>&lt;div class=“caja1”&gt;&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-tab-span">	</span>&lt;div class=“caja2”&gt;&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1"><br>
 </span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
-=======
- 
-</head>
-<body>
-
->>>>>>> 673d92de2cd55d1dafd78193fea4035941f58308
 </body>
 </html>
